<resources>
    <string name="app_name">FastNotes</string>
    <string name="user_name">User Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="register_message_login"><u>Don\'t hav an account yet? \n click here!!</u></string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="my_notes">My Notes</string>
    <string name="all_notes">All Notes</string>
    <string name="fab_switch_description">layout switch</string>
    <string name="fab_add_description">Add note</string>
    <string name="add_a_image">Add a Image</string>
    <string name="add_a_title">Add a title…</string>
    <string name="add_a_description">Add a description…</string>
    <string name="success_message_for_register_user">User has been registered with success!!</string>
    <string name="error_message_for_register_user">An error occurred while registering!!</string>
    <string name="error_lenght_password">Password must be at least 6 characters long!!</string>
    <string name="error_invalid_email">This email is invalid!!</string>
    <string name="error_already_used_email">This email has already been used!!</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="error_empty_field">some field is empty!!</string>
    <string name="error_on_login">An error has occurred!! Please check your credentials!!</string>
    <string name="button_disconnect_description">Button Disconnect</string>
    <string name="button_user_profile_description">Button User Profile</string>
    <string name="error_password_not_same">The passwords is not same!!</string>
    <string name="content_description_fab_add_image">Add a Image</string>
    <string name="error_on_get_notes">An error has occurred on get notes!!</string>
    <string name="succesfull_not_save">Note saved with successful!!</string>
    <string name="error_save_note">Error on save note!!</string>
    <string name="delete">DELETE</string>
    <string name="note_delet_success">The note was successfully deleted!!</string>
    <string name="error_on_delete_note">Error deleting note!!</string>
    <string name="error_loading_note">Error on loading note!!</string>
    <string name="public_text">public:</string>
    <string name="you_are_offline">You ar offline!!</string>
    <string name="message_offline_sync_notes">You\'re offline, when connecting the sync of notes will be done!!</string>
    <string name="message_sync_notes_successfull">All notes has been synchronized!!</string>
    <string name="error_sync_notes">Error on sync notes!!</string>
    <string name="load">LOAD</string>
    <string name="link">Link</string>
    <string name="cancel">Cancel</string>
    <string name="confirm">Confirm</string>
    <string name="delete_user_confirmation_question">Really want to delete the user?</string>
    <string name="confirmation_question_delete_note">Really want to delete this note?</string>
    <string name="disconnect_question">Do you really want to disconnect?</string>
    <string name="delete_user">Delete User</string>
    <string name="delete_user_question">Do You Really Want to Delete your user?</string>
    <string name="error_delete_user">There was an error deleting the user!!</string>
    <string name="check_the_password_and_try_again">check the password and try again!!</string>
    <string name="change_password">Change Password</string>
    <string name="new_password">New Password</string>
    <string name="old_password">Old Password</string>
    <string name="error_on_change_password">An error occurred while trying to change the password!!</string>
    <string name="success_change_password">Password has been changed successfully!!</string>
    <string name="forgot_your_password_question"><u>forgot your password?</u></string>
    <string name="forgot_your_password_question_line_break">Forgot your \n password?</string>
    <string name="reset_password_text">Enter your email so we can send you an email to reset your password</string>
    <string name="submit">Submit</string>
    <string name="email_reset_password_sent_successful">An email with a password reset link has been sent to you</string>
    <string name="default_error_message">An error has been occurred!!</string>
    <string name="error_change_username">Error changing username!!</string>
    <string name="passwords_are_same">Passwords are the same</string>
    <string name="offline_message">You\'re offline!!</string>
</resources>