<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/beige">
        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/imagebutton_back_reset_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:src="@drawable/ic_arrow_back"
            android:backgroundTint="@color/invisible"
            android:layout_margin="8dp"/>
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/text_forgot_password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.3"
            android:text="@string/forgot_your_password_question_line_break"
            android:textSize="28sp"
            android:textColor="@color/yellowish_brown"
            android:layout_marginHorizontal="20dp"
            android:gravity="center"/>
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/text_reset_password_message"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/text_forgot_password"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/reset_password_text"
            android:textColor="@color/yellowish_brown"
            android:gravity="center"
            android:textSize="18sp"
            android:layout_marginHorizontal="16dp"/>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/edittext_email_reset_password"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:textColorHint="@color/yellowish_brown"
            app:boxBackgroundColor="@color/dark_beige"
            app:boxCornerRadiusBottomEnd="16dp"
            app:boxCornerRadiusBottomStart="16dp"
            app:boxCornerRadiusTopEnd="16dp"
            app:boxCornerRadiusTopStart="16dp"
            app:boxStrokeColor="@color/yellowish_brown"
            app:boxStrokeWidth="0dp"
            app:hintTextColor="@color/yellowish_brown"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_reset_password_message"
            android:layout_marginTop="24dp"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress" />

        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:id="@+id/fab_submit_reset_password"
            android:layout_width="0dp"
            android:layout_height="58dp"
            app:layout_constraintTop_toBottomOf="@id/edittext_email_reset_password"
            app:layout_constraintStart_toStartOf="@id/edittext_email_reset_password"
            app:layout_constraintEnd_toEndOf="@id/edittext_email_reset_password"
            android:layout_marginTop="16dp"
            android:text="@string/submit"
            android:gravity="center"
            android:textColor="@color/beige"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>
