<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:backgroundTint="@color/beige"
    android:background="@drawable/rounded_shape"
    >
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/imageview_image_form_dialog"
                android:layout_width="match_parent"
                android:layout_height="240dp"
                android:scaleType="centerCrop"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:src="@tools:sample/backgrounds/scenic" />

            <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
                android:id="@+id/fab_load_image_form_dialog"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:text="@string/load"
                android:textColor="@color/beige"
                app:icon="@drawable/ic_load"
                app:iconTint="@color/beige"
                app:layout_constraintBottom_toBottomOf="@id/imageview_image_form_dialog"
                app:layout_constraintEnd_toEndOf="@id/imageview_image_form_dialog"
                app:layout_constraintTop_toBottomOf="@id/imageview_image_form_dialog" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/edittext_ling_image_input_dialog"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="15dp"
                android:layout_marginBottom="16dp"
                android:hint="@string/link"
                android:textColorHint="@color/yellowish_brown"
                app:boxBackgroundColor="@color/dark_beige"
                app:boxCornerRadiusBottomEnd="16dp"
                app:boxCornerRadiusBottomStart="16dp"
                app:boxCornerRadiusTopEnd="16dp"
                app:boxCornerRadiusTopStart="16dp"
                app:boxStrokeColor="@color/yellowish_brown"
                app:boxStrokeWidth="0dp"
                android:layout_marginTop="16dp"
                app:hintTextColor="@color/yellowish_brown"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/fab_load_image_form_dialog">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress" />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/button_confirm_image_form"
                android:layout_width="0dp"
                android:layout_height="50dp"
                style="@style/Widget.Material3.Button.ElevatedButton"
                android:backgroundTint="@color/yellowish_brown"
                android:text="@string/confirm"
                android:textSize="18sp"
                android:textColor="@color/beige"
                app:layout_constraintTop_toBottomOf="@id/edittext_ling_image_input_dialog"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/button_cancel_image_form"
                android:layout_margin="16dp"
                app:layout_constraintBottom_toBottomOf="parent"/>
            <Button
                android:id="@+id/button_cancel_image_form"
                android:layout_width="0dp"
                android:layout_height="50dp"
                style="@style/Widget.Material3.Button.ElevatedButton"
                android:backgroundTint="@color/red"
                android:text="@string/cancel"
                android:textSize="18sp"
                android:layout_margin="16dp"
                android:textColor="@color/beige"
                app:layout_constraintTop_toBottomOf="@id/edittext_ling_image_input_dialog"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/button_confirm_image_form"
                app:layout_constraintBottom_toBottomOf="parent"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>
