<?xml version="1.0" encoding="utf-8"?>

<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activities.LoginUserActivity"
    android:fillViewport="true">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/beige">
        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/_logo_login"
            android:layout_width="200dp"
            android:layout_height="200dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.2"
            app:srcCompat="@drawable/logo_vetor" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/edittext_email_login"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:textColorHint="@color/yellowish_brown"
            app:boxBackgroundColor="@color/dark_beige"
            app:boxCornerRadiusBottomEnd="16dp"
            app:boxCornerRadiusBottomStart="16dp"
            app:boxCornerRadiusTopEnd="16dp"
            app:boxCornerRadiusTopStart="16dp"
            app:boxStrokeColor="@color/yellowish_brown"
            app:boxStrokeWidth="0dp"
            app:hintTextColor="@color/yellowish_brown"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/_logo_login">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress" />

        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/edittext_password_login"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:textColorHint="@color/yellowish_brown"
            app:boxBackgroundColor="@color/dark_beige"
            app:boxCornerRadiusBottomEnd="16dp"
            app:boxCornerRadiusBottomStart="16dp"
            app:boxCornerRadiusTopEnd="16dp"
            app:boxCornerRadiusTopStart="16dp"
            app:boxStrokeColor="@color/yellowish_brown"
            app:boxStrokeWidth="0dp"
            app:hintTextColor="@color/yellowish_brown"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/edittext_email_login"
            android:layout_marginTop="20dp"
            app:endIconMode="password_toggle"
            app:endIconTint="@color/yellowish_brown"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:id="@+id/fab_login"
            android:layout_width="0dp"
            android:layout_height="58dp"
            android:layout_marginTop="50dp"
            android:backgroundTint="@color/yellowish_brown"
            android:gravity="center"
            android:text="@string/login"
            android:textColor="@color/beige"
            app:layout_constraintEnd_toEndOf="@id/edittext_password_login"
            app:layout_constraintStart_toStartOf="@id/edittext_password_login"
            app:layout_constraintTop_toBottomOf="@id/edittext_password_login"
            app:layout_constraintBottom_toTopOf="@id/textview_register_message_login"
            app:layout_constraintVertical_bias="0"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/textview_register_message_login"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@id/fab_login"
            app:layout_constraintEnd_toEndOf="@id/fab_login"
            app:layout_constraintTop_toBottomOf="@id/fab_login"
            android:text="@string/register_message_login"
            android:gravity="center"
            android:layout_marginVertical="50dp"
            android:textColor="@color/yellowish_brown"
            android:textSize="18sp"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>