<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/background_bottom_sheet"
    >

    <View
        android:id="@+id/view_pull_dimiss_delete_user"
        android:layout_width="50dp"
        android:layout_height="10dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@drawable/rounded_shape"
        android:backgroundTint="@color/yellowish_brown"
        android:layout_marginTop="16dp"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textview_confirmation_question_delete_user_bottom_sheet"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginVertical="16dp"
        android:layout_marginHorizontal="24dp"
        android:textAlignment="center"
        android:text="@string/delete_user_confirmation_question"
        android:textColor="@color/yellowish_brown"
        android:textSize="28sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/view_pull_dimiss_delete_user" />
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edittext_confirm_password_delete_user"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:hint="@string/confirm_password"
        android:layout_marginHorizontal="50dp"
        android:pointerIcon="arrow"
        android:textColorHint="@color/yellowish_brown"
        app:boxBackgroundColor="@color/dark_beige"
        app:boxCornerRadiusBottomEnd="16dp"
        app:boxCornerRadiusBottomStart="16dp"
        app:boxCornerRadiusTopEnd="16dp"
        app:boxCornerRadiusTopStart="16dp"
        app:boxStrokeColor="@color/yellowish_brown"
        app:boxStrokeWidth="0dp"
        app:endIconMode="password_toggle"
        app:endIconTint="@color/yellowish_brown"
        app:hintTextColor="@color/yellowish_brown"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textview_confirmation_question_delete_user_bottom_sheet">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword" />

    </com.google.android.material.textfield.TextInputLayout>

    <View
        android:id="@+id/view_separator_delete_user"
        android:layout_width="0dp"
        android:layout_height="2dp"
        android:layout_marginTop="16dp"
        android:background="@color/yellowish_brown"
        app:layout_constraintEnd_toEndOf="@id/textview_confirmation_question_delete_user_bottom_sheet"
        app:layout_constraintStart_toStartOf="@id/textview_confirmation_question_delete_user_bottom_sheet"
        app:layout_constraintTop_toBottomOf="@id/edittext_confirm_password_delete_user"
        android:layout_marginHorizontal="16dp"/>

    <Button
        android:id="@+id/button_confirmation_delete_user_bottom_sheet"
        style="@style/Widget.Material3.Button.ElevatedButton"
        android:layout_width="0dp"
        android:layout_height="78dp"
        android:layout_marginHorizontal="24dp"
        android:layout_marginVertical="16dp"
        android:text="@string/confirm"
        android:textSize="28sp"
        android:textColor="@color/beige"
        android:backgroundTint="@color/red"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/view_separator_delete_user" />
</androidx.constraintlayout.widget.ConstraintLayout>